[gd_scene load_steps=10 format=3 uid="uid://b62vu5kgan3t1"]

[ext_resource type="Script" path="res://objects/fire_dodge_ball.gd" id="1_iuw7i"]
[ext_resource type="PackedScene" uid="uid://bll34nka4arxh" path="res://objects/dodge_ball.tscn" id="2_ef3ah"]
[ext_resource type="Shader" uid="uid://bo4u74m7q6idc" path="res://effects/Firefx.tres" id="3_ux8ev"]
[ext_resource type="ArrayMesh" uid="uid://dba1nqkbvfoi6" path="res://effects/fireball_Mesh.obj" id="4_8tqv0"]
[ext_resource type="Shader" uid="uid://cxj0esjikgsy2" path="res://effects/emberShader.tres" id="5_1cgaf"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8i4s5"]
direction = Vector3(0, 1, 0)
spread = 40.879
initial_velocity_min = 0.5
initial_velocity_max = 1.5
gravity = Vector3(0, 0, 0)
turbulence_enabled = true
turbulence_noise_strength = 0.01
turbulence_noise_scale = 10.0
turbulence_noise_speed = Vector3(0, 1, 0)
turbulence_influence_min = 0.01
turbulence_influence_max = 0.04

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pdh2n"]
render_priority = 0
shader = ExtResource("5_1cgaf")
shader_parameter/EmberColor = Color(31.892, 2.703, 0.647, 1)

[sub_resource type="QuadMesh" id="QuadMesh_jglw2"]
lightmap_size_hint = Vector2i(7, 7)
material = SubResource("ShaderMaterial_pdh2n")
size = Vector2(0.2, 0.2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dcb57"]
render_priority = 0
shader = ExtResource("3_ux8ev")
shader_parameter/FIRECOLOR = Color(2, 1.3, 0.6, 1)

[node name="FireDodgeBall" type="Node3D"]
script = ExtResource("1_iuw7i")

[node name="DodgeBall" parent="." instance=ExtResource("2_ef3ah")]

[node name="EmberEmitter" type="GPUParticles3D" parent="DodgeBall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.288438, 0)
amount = 20
lifetime = 3.0
randomness = 0.06
process_material = SubResource("ParticleProcessMaterial_8i4s5")
draw_pass_1 = SubResource("QuadMesh_jglw2")

[node name="FireballMesh" type="MeshInstance3D" parent="DodgeBall" groups=["DodgeBalls", "Dodgeballs"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.480095)
visible = false
material_override = SubResource("ShaderMaterial_dcb57")
cast_shadow = 0
mesh = ExtResource("4_8tqv0")
skeleton = NodePath("../..")
